# openGL

./: CMakeLists1.txt  glad.c  main.cpp
example/test1/: CMakeLists.txt  OpenGL.code-workspace  glad.c  glad.h
example/test1/example/BasicLight/: main.cpp  shader.fs
example/test1/example/Blending/: main.cpp  shader.fs
example/test1/example/Color/: lightShader.fs  main.cpp
example/test1/example/CoordinateSystems/: main.cpp
example/test1/example/DepthtTesting/: main.cpp
example/test1/example/GLSL/: main.cpp  shader.vs
example/test1/example/MultipleLight/: main.cpp  shader.fs  shader.vs
example/test1/example/Textures/: main.cpp
example/test1/example/Transformations/: main.cpp  shader.fs
example/test1/example/Transition/: main.cpp
example/test1/example/learnOpenGL/: main.cpp
example/test1/example/triangle/: main.cpp
example/test1/include/: camera.h  shader.h
glad/: glad.h
